# safe-allocator-api

./: .gitignore  CONTRIBUTING.MD  Cargo.toml  LICENSE  README-DEV.MD  README.MD
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: rust.yml
src/: AGENTS.md  Cargo.toml  allocator_api.rs  lib.rs  prelude.rs  raw_alloc.rs
src/safe-allocator-api/: Cargo.toml  README.MD
src/safe-allocator-api/src/: lib.rs
