[package]
name = "safe-alloc"
version = "0.1.0"
edition = "2021"
description = "A safe wrapper around the allocation methods in alloc"
repository = "https://github.com/Sewer56/safe-alloc"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[features]
default = ["std"]
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

