[package]
name = "safe-allocator-api"
version = "0.3.1"
edition = "2021"
description = "A safe wrapper around the `allocator_api`'s Allocator trait."
repository = "https://github.com/Sewer56/safe-allocator-api"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[features]
default = ["std"]
nightly = []
std = []

[dependencies]
allocator-api2 = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

