[package]
name = "safe-allocator-api"
version = "0.6.0"
edition = "2021"
description = "A safe wrapper around the `allocator_api`'s Allocator trait."
repository = "https://github.com/Sewer56/safe-allocator-api"
license-file = "../../LICENSE"
include = ["src/**/*", "README.MD"]
readme = "README.MD"

[features]
default = ["std"]
nightly = ["std"]
std = []

[dependencies]
allocator-api2 = "0.4.0"

[dev-dependencies]
